--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <CENTER>
 <H1> MIS PAGINAS WEB FAVORITAS </H1>
 <BR>
-<IMG SRC="https://nuriagonzalez9.weebly.com/uploads/2/6/6/5/26653167/6369016_orig.jpg" WIDTH="600" HEIGHT="600">
+<IMG SRC="https://www.shutterstock.com/image-vector/middleaged-woman-paying-attention-side-260nw-2116510286.jpg" WIDTH="600" HEIGHT="600">
 </CENTER>
 <P><font size="6"> A continuacion encontrarás algunas de las paginas que mas me gustan, organizadas en una tabla </font> </P>
 <CENTER>
@@ -35,20 +35,21 @@ text-align: left;
 <th>DESCRIPCIÓN</th>
 </tr>
 <tr>
-<td>Inteligencia artificial</td>
-<td><a href="https://getimg.ai/" target="_blank">Getimg</a></td>
-<td>Inteligencia artificial con un fin de creacion de imagenes gratuitas </td>
+<td>Traductor En Linea</td>
+<td><a href="https://www.deepl.com/es/translator" target="_blank">deepl</a></td>
+<td>El mejor traductor en linea creado </td>
 </tr>
 <tr>
-<td>Patatap</td>
-<td><a href="https://www.patatap.com/" target="_blank">Patatap</a></td>
-<td>Web que nos permite crear animaciones con música</td>
+<td>Mureka</td>
+<td><a href="https://www.mureka.ai/es/" target="_blank">Murekaai</a></td>
+<td>Inteligencia artificial que permite crear musica, canciones, etc...</td>
 </tr>
 <tr>
-<td>Astronaut</td>
-<td><a href="http://astronaut.io/" target="_blank">Astronaut</a></td>
-<td>Breves vistazos a sucesos recientes, pero anónimos de la vida sobre la Tierra</td>
+<td>gtmetrix</td>
+<td><a href="https://gtmetrix.com/" target="_blank">gtmetrix</a></td>
+<td>Herramienta para medir el rendimiento de su web</td>
 </tr>
 </table>
 </CENTER>
 </BODY>
+
