--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <TITLE>PAGINAS WEB FAVORITAS /2025</TITLE>
 </HEAD>
     
-<BODY BGCOLOR="4C32FC"TEXT="WHITE">
+<BODY BGCOLOR="Black"TEXT="WHITE">
 <BR>
 <CENTER>
 <H1> MIS PAGINAS WEB FAVORITAS </H1>
@@ -52,4 +52,5 @@ text-align: left;
 </table>
 </CENTER>
 </BODY>
+
 
